# keycloak-rust-api

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/handlers/: admin.rs  clients.rs  health.rs  mod.rs  users.rs
src/handlers/keycloak/: admin.rs  clients.rs  groups.rs  mod.rs  users.rs
