[package]
name = "keycloak-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
dotenv="0.15.0"
actix-rt = "2.8.0"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
keycloak = "21.0.100"
actix-web-middleware-keycloak-auth = "0.4.0"
serde_json="1.0.95"
serde={version="1.0.163", features=["derive"]}
actix-web-validator = "5.0.1"
validator={ version="0.16.0", features=["derive"] }
jsonwebkey={ version = "0.3.5", features = ["jwt-convert"] }
regex = "1.8.4"
actix-web-httpauth="0.8.0"

[dependencies.simple_logger]
version = "4.0.0"
default-features = false
features = ["colors", "timestamps", "stderr"]